# fr

./: Dockerfile  README.md  pyproject.toml
note/: LinearRegression.ipynb  LinearRegression.py  LinearRegression2.ipynb  r1.ipynb
src/fr/: main.py  mmanager.py
