[project]
name = "fr"
version = "0.2.1"
description = "from sklearn.linear_model import LinearRegression 2 FastAPI"
authors = [
    {name = "dMario24", email = "data.mario24@gmail.com"},
]
dependencies = [
    "scikit-learn>=1.5.1",
    "fastapi>=0.112.2",
    "uvicorn[standard]>=0.30.6"
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = true

[project.scripts]
pp = 'fr.cli:predict'

[tool.pdm.dev-dependencies]
test = [
    "pytest>=8.3.2",
    "pytest-cov>=5.0.0",
]
note = [
    "notebook>=7.2.2",
    "matplotlib>=3.9.2",
]
